sap-concur/4.2/modules/ROOT/pages/sap-concur-connector-reference.adoc
= SAP Concur Connector 4.2 Reference 
:page-aliases: connectors::sap/sap-concur-connector-reference.adoc



Anypoint Connector for SAP Concur (Concur Connector) is a SaaS provider from SAP for integrated travel and expense management solutions.

Release Notes: xref:release-notes::connector/sap-concur-connector-release-notes-mule-4.adoc[SAP Concur Connector Release Notes]

== Default Configuration

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | |x
| Connection a| config_connection, Connection
 | The connection types that can be provided to this configuration. | |x
| host a| String |  Host for consuming API |  sandbox.api.sap.com |
| port a| String |  Port for consuming API |  443 |
| basePath a| String |  Basepath for consuming API |  /concur/api |
| protocol a| String |  Protocol for consuming API |  HTTPS |
| Proxy Config Reference a| String | Config reference of the proxy used for HTTP calls. |  |
| authorization a| String |  `'Bearer ' + access token` |  |x
| Expiration Policy a| ExpirationPolicy |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This doesn't mean the platform expires an eligible instance. The runtime purges instances as it sees fit. |  |
|===

== Operations

* Create Entry Attendee Association
* Create Attendee (Deprecated)
* Create Expense Entry
* Create Expense Itemization
* Create List Item (Deprecated)
* Create Payment Request
* Create Purchase Order
* Create Quick Expense (Decommissioned)
* Create Receipt Image
* Create Report
* Create Request (Decommissioned)
* Create Vendors
* Delete Entry Attendee Association
* Delete Expense Entry (Deprecated)
* Delete Expense Itemization (Deprecated)
* Delete List Item (Deprecated)
* Delete Quick Expense (Decommissioned)
* Delete Receipt Image
* Delete Vendor
* Get Allocation
* Get Allocations
* Get Attendee (Deprecated)
* Get Attendee Type (Deprecated)
* Get Attendee Types (Deprecated)
* Get Attendees (Deprecated)
* Get Digital Tax Invoice
* Get Digital Tax Invoices
* Get Entry Attendee Association
* Get Entry Attendee Associations
* Get Expense Entries
* Get Expense Entry
* Get Expense Group Configuration (Deprecated)
* Get Expense Group Configurations (Deprecated)
* Get Expense Itemization
* Get Expense Itemizations
* Get Invoices
* Get List Item (Deprecated)
* Get List Items (Deprecated)
* Get Location (Deprecated)
* Get Locations (Deprecated)
* Get Payment Request
* Get Payment Request Digest
* Get Payment Request Digests
* Get Purchase Order
* Get Quick Expense (Decommissioned)
* Get Quick Expenses (Decommissioned)
* Get Receipt Image
* Get Receipt Images
* Get Report
* Get Reports
* Get Request (Decommissioned)
* Get Request Group Configurations (Decommissioned)
* Get Requests (Decommissioned)
* Get Users (Decommissioned)
* Get Vendors
* Recall Request (Decommissioned)
* Submit Request (Decommissioned)
* Update Attendee (Deprecated)
* Update Attendee Type (Deprecated)
* Update Digital Tax Invoice
* Update Entry Attendee Association
* Update Expense Entry
* Update Expense Itemization
* Update Invoices
* Update List Item (Deprecated)
* Update Payment Request
* Update Purchase Order
* Update Quick Expense (Decommissioned)
* Update Report
* Update Request (Decommissioned)
* Update Vendors

== Append Receipt Image

`<sapconcur-connector:append-receipt-image>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Append Receipt Image Request Data a| String |  |  `#[payload]` |
| User a| String | Login ID of the user. Optional. The user must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Id a| String |  ID of the receipt image to delete |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | String
|===

=== For Configurations

* config

== Create Entry Attendee Association

`<sapconcur-connector:create-entry-attendee-association>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Create Entry Attendee Association Request Data a| Any |  |  `#[payload]` |
| User a| String | Login ID of the user who owns this entry-attendee association. The user must have the Web Services Admin role to use this parameter. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Create Attendee (Deprecated)

`<sapconcur-connector:create-attendee>`

NOTE: This operation uses the SAP Concur Attendees v3 API, which SAP deprecated on July 1, 2025. SAP recommends migrating to the Attendees v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Create Attendee Request Data a| Any |  |  `#[payload]` |
| User a| String | Login ID of the user who added the attendee to an expense. The user who is performing this API request must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Create Expense Entry

`<sapconcur-connector:create-expense-entry>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Create Expense Entry Request Data a| Any |  |  `#[payload]` |
| User a| String | Login ID of the user who owns the entries. The user must have the Web Services Admin role to use this parameter. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Create Expense Itemization

`<sapconcur-connector:create-expense-itemization>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Create Expense Itemization Request Data a| Any |  |  `#[payload]` |
| User a| String | Login ID of the user who owns the itemizations. The user must have the Web Services Admin role to use this parameter. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Create List Item (Deprecated)

`<sapconcur-connector:create-list-item>`

NOTE: This operation uses the SAP Concur List v3 / List Item v3 API, which SAP deprecated on April 16, 2021. SAP recommends migrating to the List v4 / List Item v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Create List Item Request Data a| Any |  |  `#[payload]` |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Create Payment Request

`<sapconcur-connector:create-payment-request>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Create Payment Request Request Data a| Any |  |  `#[payload]` |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Create Purchase Order

`<sapconcur-connector:create-purchase-order>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Create Purchase Order Request Data a| Any |  |  `#[payload]` |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Create Quick Expense (Decommissioned)

`<sapconcur-connector:create-quick-expense>`

NOTE: This operation uses the SAP Concur Quick Expense v3.0 API, which SAP has decommissioned. SAP recommends migrating to the Quick Expense v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Create Quick Expense Request Data a| Any |  |  `#[payload]` |
| User a| String | Login ID of the user. Optional. The user must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Create Receipt Image

`<sapconcur-connector:create-receipt-image>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Create Receipt Image Request Data a| String |  |  `#[payload]` |
| User a| String | Login ID of the user. Optional. The user must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Create Report

`<sapconcur-connector:create-report>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Create Report Request Data a| Any |  |  `#[payload]` |
| User a| String |  Optional.Login ID for the Report Owner. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Create Request (Decommissioned)

`<sapconcur-connector:create-request>`

NOTE: This operation uses the SAP Concur Travel Request v3.1 API, which SAP is decommissioning. Access to this API ends November 3, 2026. SAP recommends migrating to the Request v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Create Request Request Data a| Any |  |  `#[payload]` |
| User a| String | Login ID of the user. Optional. The user must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Do Submit a| Boolean |  Trigger a submit action upon a successfull save operation |  |
| Force Submit a| Boolean |  Force the submit operation even if non-blocking functional exceptions were to be raised on request creation or update operation. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Create Vendors

`<sapconcur-connector:create-vendors>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Create Vendors Request Data a| Any |  |  `#[payload]` |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Delete Entry Attendee Association

`<sapconcur-connector:delete-entry-attendee-association>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| User a| String | Login ID of the user who owns this entry-attendee association. The user must have the Web Services Admin role to use this parameter. |  |
| Id a| String |  The ID of the entry-attendee association to delete. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | String
|===

=== For Configurations

* config

== Delete Expense Entry (Deprecated)

`<sapconcur-connector:delete-expense-entry>`

NOTE: This operation uses the SAP Concur Expense v3 DELETE API, which SAP deprecated on June 26, 2025. SAP recommends migrating to the Expense v4 DELETE API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| User a| String | Login ID of the user who owns the entries. The user must have the Web Services Admin role to use this parameter. |  |
| Id a| String |  The ID of the expense entry to delete. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | String
|===

=== For Configurations

* config

== Delete Expense Itemization (Deprecated)

`<sapconcur-connector:delete-expense-itemization>`

NOTE: This operation uses the SAP Concur Expense v3 DELETE API, which SAP deprecated on June 26, 2025. SAP recommends migrating to the Expense v4 DELETE API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| User a| String | Login ID of the user who owns the itemizations. The user must have the Web Services Admin role to use this parameter. |  |
| Id a| String |  The ID of the expense itemization to delete. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | String
|===

=== For Configurations

* config

== Delete List Item (Deprecated)

`<sapconcur-connector:delete-list-item>`

NOTE: This operation uses the SAP Concur List v3 / List Item v3 API, which SAP deprecated on April 16, 2021. SAP recommends migrating to the List v4 / List Item v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| List Id a| String |  The unique identifier ofList associated with a listitem to be deleted |  |x
| Id a| String |  The unique identifier ofListitem to delete |  |x
| Content Type a| String | Specifies the format of the transferred data. | `application/json` | 
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | String
|===

=== For Configurations

* config

== Delete Quick Expense (Decommissioned)

`<sapconcur-connector:delete-quick-expense>`

NOTE: This operation uses the SAP Concur Quick Expense v3.0 API, which SAP has decommissioned. SAP recommends migrating to the Quick Expense v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| User a| String | Login ID of the user. Optional. The user must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Id a| String |  The ID of the quick expense to be deleted. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | String
|===

=== For Configurations

* config

== Delete Receipt Image

`<sapconcur-connector:delete-receipt-image>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| User a| String | Login ID of the user. Optional. The user must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Id a| String |  ID of the receipt image to delete |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | String
|===

=== For Configurations

* config

== Delete Vendor

`<sapconcur-connector:delete-vendor>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Vendor Code a| String |  Vendor Code to be deleted |  |x
| Address Code a| String |  Address Code to be deleted |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Allocation

`<sapconcur-connector:get-allocation>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| User a| String | Login ID of the user who owns the allocation. The user must have the Web Services Admin role to use this parameter. |  |
| Id a| String |  The unique identifier for the allocation. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Allocations

`<sapconcur-connector:get-allocations>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Limit a| Number | Number of records to return. The default is 25 and the maximum is 100. |  |
| Offset a| String | Starting point of the next set of results, afterLimit specified inLimit field has been reached. |  |
| Report Id a| String |  The unique identifier for the report as it appears in the Concur Expense UI. Format: A variable-length string. Maximum length: 32 characters. |  |
| Entry Id a| String |  The unique identifier for the expense entry. |  |
| Itemization Id a| String |  The unique identifier for the expense itemization. |  |
| User a| String | Login ID of the user who owns the allocation. The user must have the Web Services Admin role to use this parameter. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Attendee (Deprecated)

`<sapconcur-connector:get-attendee>`

NOTE: This operation uses the SAP Concur Attendees v3 API, which SAP deprecated on July 1, 2025. SAP recommends migrating to the Attendees v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| User a| String | Login ID of the user who added the attendee to an expense. The user who is performing this API request must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Id a| String |  |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Attendee Type (Deprecated)

`<sapconcur-connector:get-attendee-type>`

NOTE: This operation uses the SAP Concur Attendee Types v3 API, which SAP deprecated on July 1, 2025. SAP recommends migrating to the Attendee Types v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Id a| String |  The ID of the attendee type. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Attendee Types (Deprecated)

`<sapconcur-connector:get-attendee-types>`

NOTE: This operation uses the SAP Concur Attendee Types v3 API, which SAP deprecated on July 1, 2025. SAP recommends migrating to the Attendee Types v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Offset a| String | Starting point of the next set of results, afterLimit specified inLimit field has been reached. |  |
| Limit a| Number | Number of records to return. Default value: 25 |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Attendees (Deprecated)

`<sapconcur-connector:get-attendees>`

NOTE: This operation uses the SAP Concur Attendees v3 API, which SAP deprecated on July 1, 2025. SAP recommends migrating to the Attendees v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| External Id a| String |  The external ID of an attendee. By entering a value for this parameter, you can limit the results to the attendees who match the specified external ID. Up to 10 comma-separated external IDs may be specified. |  |
| Attendee Type Id a| String |  The ID of an attendee type. By entering a value for this parameter, you can limit the results to the attendees who match the specified type. |  |
| Offset a| String | Starting point of the next set of results, afterLimit specified inLimit field has been reached. |  |
| Limit a| Number | Number of records to return. Default value: 25 |  |
| User a| String | Login ID of the user who added the attendee to an expense. The user who is performing this API request must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Digital Tax Invoice

`<sapconcur-connector:get-digital-tax-invoice>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Id a| String |  The ID of the digital tax invoice to update. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Digital Tax Invoices

`<sapconcur-connector:get-digital-tax-invoices>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Offset a| String | Starting point of the next set of results, afterLimit specified inLimit field has been reached. |  |
| Limit a| Number | Number of records to return. Default value: 25 |  |
| Modifiedafter a| String |  A modification date for the queue record; this parameter can be used to limit the results of the GET request to the queue items that have been added sinceLast time the validation company queried the queue. The user must have the Web Services Admin role to use this parameter. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Entry Attendee Association

`<sapconcur-connector:get-entry-attendee-association>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| User a| String | Login ID of the user who owns this entry-attendee association. The user must have the Web Services Admin role to use this parameter. |  |
| Id a| String |  The ID of the entry-attendee association to delete. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Entry Attendee Associations

`<sapconcur-connector:get-entry-attendee-associations>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Entry Id a| String |  The ID of the entry for which to retrieve entry-attendee associations. |  |
| Offset a| String | Starting point of the next set of results, afterLimit specified inLimit field has been reached. |  |
| Limit a| Number | Number of records to return. Default value: 25 |  |
| User a| String | Login ID of the user who owns this entry-attendee association. The user must have the Web Services Admin role to use this parameter. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Expense Entries

`<sapconcur-connector:get-expense-entries>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Report Id a| String |  The report ID of the entries to be retrieved.  Format: An alpha-numeric GUID string. |  |
| Payment Type Id a| String |  The ID of the payment type of the entries to be retrieved. |  |
| Batch Id a| String |  The batch ID for the entries to be retrieved. The batch ID identifies the batch that contains the report payee associated with the entries. Use the GET Payment Batch function to learn the Payment Type ID for the desired Payment Type. |  |
| Is Billable a| Boolean |  Determines whether the operation retrieves entries that are billable. Format: true or false |  |
| Attendee Type Code a| String |  The ID of the attendee type for the entries to be retrieved. |  |
| Has Attendees a| Boolean |  Determines whether the operation retrieves entries that have attendees. Format: true or false |  |
| Has Vat a| Boolean |  Determines whether the operation retrieves entries that have VAT details. Format: true or false |  |
| Expense Type Code a| String |  The code for the expense type for the entries to be retrieved. |  |
| Attendee Id a| String |  The attendee associated with the entries to be retrieved. |  |
| Offset a| String | Starting point of the next set of results, afterLimit specified inLimit field has been reached. |  |
| Limit a| Number | Number of records to return. Default value: 25 |  |
| User a| String | Login ID of the user who owns the entries. The user must have the Web Services Admin role to use this parameter. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Expense Entry

`<sapconcur-connector:get-expense-entry>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| User a| String | Login ID of the user who owns the entries. The user must have the Web Services Admin role to use this parameter. |  |
| Id a| String |  The ID of the expense entry to delete. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Expense Group Configuration (Deprecated)

`<sapconcur-connector:get-expense-group-configuration>`

NOTE: This operation uses the SAP Concur Expense Group Configurations v3 API, which SAP deprecated on June 26, 2025. SAP recommends migrating to the Expense Configuration v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| User a| String | Login ID of the user associated with this expense group configuration. The user must have the Web Services Admin role to use this parameter. |  |
| Id a| String |  The ID of the expense group configuration. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Expense Group Configurations (Deprecated)

`<sapconcur-connector:get-expense-group-configurations>`

NOTE: This operation uses the SAP Concur Expense Group Configurations v3 API, which SAP deprecated on June 26, 2025. SAP recommends migrating to the Expense Configuration v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| User a| String | Login ID of the user associated with this expense group configuration. The user must have the Web Services Admin role to use this parameter. |  |
| Offset a| String | Starting point of the next set of results, afterLimit specified inLimit field has been reached. |  |
| Limit a| Number | Number of records to return Default value: 10 |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Expense Itemization

`<sapconcur-connector:get-expense-itemization>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| User a| String | Login ID of the user who owns the itemizations. The user must have the Web Services Admin role to use this parameter. |  |
| Id a| String |  The ID of the expense itemization to delete. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Expense Itemizations

`<sapconcur-connector:get-expense-itemizations>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Report Id a| String |  The report ID of the itemizations to be retrieved.  Format: An alpha-numeric string |  |
| Entry Id a| String |  The entry ID for the itemizations to be retrieved. |  |
| Expense Type Code a| String |  The expense type code for the itemizations to be retrieved. |  |
| Offset a| String | Starting point of the next set of results, afterLimit specified inLimit field has been reached. |  |
| Limit a| Number | Number of records to return. Default value: 25 |  |
| User a| String | Login ID of the user who owns the itemizations. The user must have the Web Services Admin role to use this parameter. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Invoices

`<sapconcur-connector:get-invoices>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Offset a| String | Starting point of the next set of results, afterLimit specified inLimit field has been reached. |  |
| Limit a| Number | Number of invoices to retrieve. Maximum value: 1000 |  |
| Modifiedafter a| String |  A parameter that can be used to limit the results to invoices modified after the specified date. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get List Item (Deprecated)

`<sapconcur-connector:get-list-item>`

NOTE: This operation uses the SAP Concur List v3 / List Item v3 API, which SAP deprecated on April 16, 2021. SAP recommends migrating to the List v4 / List Item v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| List Id a| String |  The unique identifier forList this item is a member. |  |
| Id a| String |  The unique identifier ofListitem to delete |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get List Items (Deprecated)


`<sapconcur-connector:get-list-items>`

NOTE: This operation uses the SAP Concur List v3 / List Item v3 API, which SAP deprecated on April 16, 2021. SAP recommends migrating to the List v4 / List Item v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Limit a| Number | Number of records to return. The default is 25 and the maximum is 100. |  |
| Offset a| String |  The start of the page offset. The default is from the beginning. |  |
| List Id a| String |  The unique identifier forList this item is a member. |  |
| Name a| String |  Name of ListItem, otherwise pass null. Text Max length: 64.  |  |
| Parent Id a| String |  The unique identifier of this item's parent. Is empty when there is no parent. |  |
| Level1code a| String |  The item code for the first level ofList. All lists have at least a Level1Code. Text maximum 32 characters |  |
| Level2code a| String |  The item code for the second level ofList. Empty when this level doesn't exist inList. Text maximum 32 characters |  |
| Level3code a| String |  The item code for the third level ofList. Empty when this level doesn't exist inList. Text maximum 32 characters |  |
| Level4code a| String |  The item code for the fourth level ofList. Empty when this level doesn't exist inList. Text maximum 32 characters |  |
| Level5code a| String |  The item code for the fifth level ofList. Empty when this level doesn't exist inList. Text maximum 32 characters |  |
| Level6code a| String |  The item code for the sixth level ofList. Empty when this level doesn't exist inList. Text maximum 32 characters |  |
| Level7code a| String |  The item code for the seventh level ofList. Empty when this level doesn't exist inList. Text maximum 32 characters |  |
| Level8code a| String |  The item code for the eighth level ofList. Empty when this level doesn't exist inList. Text maximum 32 characters |  |
| Level9code a| String |  The item code for the ninth level ofList. Empty when this level doesn't exist inList. Text maximum 32 characters |  |
| Level10code a| String |  The item code for the tenth level ofList. Empty when this level doesn't exist inList. Text maximum 32 characters |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Location (Deprecated)

`<sapconcur-connector:get-location>`

NOTE: This operation uses the SAP Concur Locations v3 API, which SAP deprecated on October 10, 2025. SAP recommends migrating to the Localities v5 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Id a| String |  The ID ofLocation. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Locations (Deprecated)

`<sapconcur-connector:get-locations>`

NOTE: This operation uses the SAP Concur Locations v3 API, which SAP deprecated on October 10, 2025. SAP recommends migrating to the Localities v5 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Offset a| String | Starting point of the next set of results, afterLimit specified inLimit field has been reached. |  |
| Limit a| Number | Number of records to return. Default value: 25 |  |
| Name a| String |  A common name associated with location, otherwise pass null. This name can be a location description such as a neighborhood (SoHo), a landmark (Statue of Liberty), or a city name (New York). |  |
| City a| String |  The city name ofLocation. |  |
| Country Subdivision a| String |  The <a target="_blank" href="http://en.wikipedia.org/wiki/ISO_3166-2">ISO 3166-2:2007 country subdivision code</a> forLocation. Example: US-WA |  |
| Country a| String |  The 2-letter <a target="_blank" href="http://en.wikipedia.org/wiki/ISO_3166-1_alpha-2">ISO 3166-1 country code</a> forLocation. Example: United States is US |  |
| Administrative Region a| String |  The administrative region ofLocation. An administrative region is a government unit, such as a county, that contains one or more cities. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Payment Request

`<sapconcur-connector:get-payment-request>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Id a| String |  Payment Request ID. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Payment Request Digest

`<sapconcur-connector:get-payment-request-digest>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Id a| String |  The payment request ID |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Payment Request Digests

`<sapconcur-connector:get-payment-request-digests>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Offset a| String |  The start of the page offset. |  |
| Limit a| Number | Number of records to return (default 1000). |  |
| Approval Status a| String |  A code representing a Payment Request Approval Status. Use GET /invoice/localizeddata to get the available approval status codes. |  |
| Payment Status a| String |  A code representing a Payment Request Payment Status. Use GET /invoice/localizeddata to get the available payment status codes |  |
| Vendor Invoice Number a| String |  Vendor invoice number tied to invoice. |  |
| Create Date Before a| Date |  The payment request create date is before this date. Format: YYYY-MM-DD. |  |
| Create Date After a| Date |  The payment request create date is after this date. Format: YYYY-MM-DD. |  |
| User Defined Date Before a| Date |  The payment request user defined date is before this date. Format: YYYY-MM-DD. |  |
| User Defined Date After a| Date |  The payment request user defined date is after this date. Format: YYYY-MM-DD. |  |
| Submit Date Before a| Date |  The payment request submit date is before this date. Format: YYYY-MM-DD. |  |
| Submit Date After a| Date |  The payment request submit date is after this date. Format: YYYY-MM-DD. |  |
| Paid Date Before a| Date |  The payment request paid date is before this date. Format: YYYY-MM-DD. |  |
| Paid Date After a| Date |  The payment request paid date is after this date. Format: YYYY-MM-DD. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Purchase Order

`<sapconcur-connector:get-purchase-order>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Id a| String |  The identifier for the purchase order. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Quick Expense (Decommissioned)

`<sapconcur-connector:get-quick-expense>`

NOTE: This operation uses the SAP Concur Quick Expense v3.0 API, which SAP has decommissioned. SAP recommends migrating to the Quick Expense v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| User a| String | Login ID of the user. Optional. The user must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Id a| String |  The ID of the quick expense to be deleted. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Quick Expenses (Decommissioned)

`<sapconcur-connector:get-quick-expenses>`

NOTE: This operation uses the SAP Concur Quick Expense v3.0 API, which SAP has decommissioned. SAP recommends migrating to the Quick Expense v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Offset a| String |  The start of the page offset. |  |
| Limit a| Number | Number of records to return (default 25). |  |
| User a| String | Login ID of the user. Optional. The user must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Receipt Image

`<sapconcur-connector:get-receipt-image>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| User a| String | Login ID of the user. Optional. The user must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Id a| String |  ID of the receipt image to delete |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Receipt Images

`<sapconcur-connector:get-receipt-images>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Offset a| String |  Starting page offset |  |
| Limit a| Number |  Number of records to return (default 25) |  |
| User a| String | Login ID of the user. Optional. The user must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Report

`<sapconcur-connector:get-report>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| User a| String |  Optional.Login ID of the report owner(s) to use when searching for reports. If the value is set to LoginID, reports for the report owner with this login ID value are returned. If the value is set to ALL, reports for all report owners are returned. If this parameter is not specified, reports for the OAuth Consumer are returned. The access token owner (OAuth Consumer) must have the Web Services Admin role to use this parameter. |  |
| Id a| String |  The unique identifier for the report. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Reports

`<sapconcur-connector:get-reports>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Offset a| String |  Starting page offset |  |
| Limit a| Number |  Number of records to return (default 25) |  |
| User a| String |  Optional.Login ID of the report owner(s) to use when searching for reports. If the value is set to LoginID, reports for the report owner with this login ID value are returned. If the value is set to ALL, reports for all report owners are returned. If this parameter is not specified, reports for the OAuth Consumer are returned. The access token owner (OAuth Consumer) must have the Web Services Admin role to use this parameter. |  |
| Approval Status Code a| String |  The status code for the Approval Status. The values can include Concur Expense standard codes or custom codes. The Concur Expense standard code values are: A_AAFH - Report submission triggered an anomaly and fraud check; A_ACCO - Report is pending reviews; A_APPR - Report has been approved; A_EXTV - Report is pending external validation; A_FILE - Report has been submitted; A_NOTF - Report has not been submitted; A_PBDG - Report approval is pending Budget approval; A_PECO - Report approval is pending Cost object approval; A_PEND - Report is pending manager approval; A_PVAL - Report is pending prepayment validation; A_RESU - Report needs to be resubmitted; A_RHLD - Report submission is pending receipt images; A_TEXP - Report expired in approval queue. For custom codes, contact Concur Developer Support. |  |
| Payment Status Code a| String |  The payment status code for the report. The values can include Concur Expense standard codes or custom codes. The Concur Expense standard code values are: P_HOLD - Report payment is on hold; P_NOTP - Report has not been paid; P_PAID - Report has been paid; P_PAYC - Payment is confirmed. Some or all of the report expenses have been paid; P_PROC - Report is in process to be paid. For custom codes, contact Concur Developer Support. |  |
| Currency Code a| String |  The 3-letter ISO 4217 currency code for the report currency. Example: USD. |  |
| Payment Type a| String |  The unique identifier for the payment type that is the payment type for at least one expense entry in the report. Use PaymentTypeID from Response of GET Expense Group Configurations V3 to obtain valid payment types. |  |
| Reimbursement Method a| String |  The method the report owner is reimbursed. VALUES: ADPPAYR - ADP Payroll; APCHECK - AP (Company Check); CNQRPAY - Expense Pay; PMTSERV - Other Payment Service. NOTE: PAY_PAL is NOT supported. |  |
| Approver Login Id a| String | Login ID for the report approver that is the current approver assigned to the report. |  |
| Expense Type Code a| String |  The expense type code that is the expense type for at least one expense entry in the report. Use ExpenseTypeCode from Response of GET Expense Group Configurations V3. |  |
| Attendee Type Code a| String |  The report contains expense entries that have attendees of the specified type. |  |
| Country Code a| String |  The report country. Maximum 2 characters. Format: The ISO 3166-1 alpha-2 country code. Example: United States is US. |  |
| Batch Id a| String |  The unique identifier for a payment batch where there is at least one report payee within the report. Use the BatchID from Response of GET Payment Batch List. |  |
| Vendor Name a| String |  The Vendor Description that is the vendor for at least one expense entry in the report. |  |
| Has Vat a| Boolean |  Determines if the report has at least one expense entry with VAT details. FORMAT: true or false. |  |
| Has Images a| Boolean |  Determines if the report has at least one expense entry with an entry image or if there is a report image for this report. FORMAT: true or false. |  |
| Has Attendees a| Boolean |  Determines if the report has at least one expense entry with an attendee. FORMAT: true or false. |  |
| Has Billable Expenses a| Boolean |  The IsBillable flag for at least one expense entry in the report. FORMAT: true or false. |  |
| Is Test User a| Boolean |  The report owner is a test user using the report for testing purposes in a non-production environment. FORMAT: true or false. |  |
| Expense Group Config Id a| String |  The unique identifier for the expense group configuration associated to the report's expense group. Use the ID from the Response of the Expense Group Configurations V3. |  |
| Cost Object a| String | List item code for an allocation field for at least allocation in the report. |  |
| Entry Transaction Date Before a| Date |  The entry transaction date for at least one expense entry in the report is before this date. Format: YYYY-MM-DD |  |
| Entry Transaction Date After a| Date |  The entry transaction date for at least one expense entry in the report is after this date. Format: YYYY-MM-DD |  |
| Create Date Before a| Date |  The report create date is before this date. Format: YYYY-MM-DD |  |
| Create Date After a| Date |  The report create date is after this date. Format: YYYY-MM-DD |  |
| User Defined Date Before a| Date |  The report user defined date is before this date. Format: YYYY-MM-DD |  |
| User Defined Date After a| Date |  The report user defined date is after this date. Format: YYYY-MM-DD |  |
| Submit Date Before a| Date |  The report submit date is before this date. Format: YYYY-MM-DD |  |
| Submit Date After a| Date |  The report submit date is after this date. Format: YYYY-MM-DD |  |
| Processing Payment Date Before a| Date |  The report processing payment date is before this date. Format: YYYY-MM-DD |  |
| Processing Payment Date After a| Date |  The report processing payment date is after this date. Format: YYYY-MM-DD |  |
| Paid Date Before a| Date |  The report paid date is before this date. Format: YYYY-MM-DD |  |
| Paid Date After a| Date |  The report paid date is after this date. Format: YYYY-MM-DD |  |
| Modified Date Before a| Date |  The report modified date is before this date. Format: YYYY-MM-DD |  |
| Modified Date After a| Date |  The report modified date is after this date. Format: YYYY-MM-DD |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Request (Decommissioned)

`<sapconcur-connector:get-request>`

NOTE: This operation uses the SAP Concur Travel Request v3.1 API, which SAP is decommissioning. Access to this API ends November 3, 2026. SAP recommends migrating to the Request v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| User a| String | Login ID of the user. Optional. The user must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Id a| String | Request ID. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Request Group Configurations (Decommissioned)

`<sapconcur-connector:get-request-group-configurations>`

NOTE: This operation uses the SAP Concur Travel Request v3.1 API, which SAP is decommissioning. Access to this API ends November 3, 2026, the same date as the related Travel Request v3.1 shutdown. SAP doesn't currently offer a Request Policy v4 replacement for this operation.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| User a| String | Login ID of the user. Optional. The user must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Offset a| String |  Starting page offset |  |
| Limit a| Number |  DeterminesNumber of records to return (default 10) |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Requests (Decommissioned)

`<sapconcur-connector:get-requests>`

NOTE: This operation uses the SAP Concur Travel Request v3.1 API, which SAP is decommissioning. Access to this API ends November 3, 2026. SAP recommends migrating to the Request v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Offset a| String |  Starting page offset |  |
| Limit a| Number |  Number of records to return (default 100) |  |
| User a| String | Login ID of the user who owns this Request. The user must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Status a| String |  The Status search term specifies which travel request or approval status to return. If no Status value is sent, the default Status of Active is used. |  |
| Modified After a| Date |  Returns travel requests in which the associated dependents (header, entries, segments, allocations, attendees, comments) were modified after the specified date and time. This search term can be used along with other search terms to narrow the results. The date and time (if desired) should be in UTC. The format is: YYYY-MM-DDThh:mm:ss. |  |
| Modified Before a| Date |  Returns travel requests in which the associated dependents (header, entries, segments, allocations, attendees, comments) were modified before the specified date and time.This search term can be used along with other search terms to narrow the results. The date and time (if desired) should be in UTC. The format is: YYYY-MM-DDThh:mm:ss. |  |
| With Segment Types a| Boolean |  Pass true to populate the SegmentType field in the result. |  |
| With User Permissions a| Boolean |  Pass true to get the UserPermssions in the result. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Users (Decommissioned)

`<sapconcur-connector:get-users>`

NOTE: This operation uses the SAP Concur Users v3.0 API, which SAP decommissioned on January 21, 2025. Calls to this operation return an HTTP 403 error. SAP recommends migrating to the Identity v4 API (`/profile/identity/v4/Users`), which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Offset a| String | Starting point of the next set of results, afterLimit specified inLimit field has been reached. |  |
| Limit a| Number | Number of records to return. Default value: 25. Maximum: 100. |  |
| Primary Email a| String |  Primary email of the user. |  |
| Employee Id a| String |  Employee ID of the user. |  |
| User a| String | Login ID of the user. |  |
| Last Name a| String | Last name of the user. |  |
| Active a| Boolean |  Indicates whether to return active or inactive users. FORMAT: true or false |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Get Vendors

`<sapconcur-connector:get-vendors>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Limit a| Number |  The maximum number of items to be returned in a  response. The default is 25 and cannot exceed 1000. |  |
| Offset a| String |  Specifies the starting point for the next query when iterating through the collection response.  Use with paged collections of resources. |  |
| Sort Direction a| String |  ascending or descending. The default value is ascending. |  |
| Sort By a| String |  Field you need to the results to be sorted by. Vendor Name is made the default if no value is sent. Only fields that are added to the vendor form can be used here. Fields have to be specified by name as specified in Doc. |  |
| Search Type a| String |  Valid Options - exact, begins, contains and ends - Applies for the entire given search parameters. The default value if not sent is exact. |  |
| Vendor Code a| String |  Vendor Code to be searched. |  |
| Vendor Name a| String |  Vendor Name to be searched. |  |
| Tax Id a| String |  Tax ID to be searched. |  |
| Buyer Account Number a| String |  Buyer Account Number to be searched. |  |
| Address Code a| String |  Address Code to be searched. |  |
| Address1 a| String |  Address 1 to be searched. |  |
| Address2 a| String |  Address 2 to be searched. |  |
| Address3 a| String |  Address 3 to be searched. |  |
| City a| String |  City to be searched. |  |
| State a| String |  State to be searched. |  |
| Postal Code a| String |  Postal Code to be searched. |  |
| Approved a| String |  Find Approved/Unapproved Vendors, True/False |  |
| Country a| String |  Country to be searched. |  |
| Custom1 a| String |  Custom 1 to be searched. |  |
| Custom2 a| String |  Custom 2 to be searched. |  |
| Custom3 a| String |  Custom 3 to be searched. |  |
| Custom4 a| String |  Custom 4 to be searched. |  |
| Custom5 a| String |  Custom 5 to be searched. |  |
| Custom6 a| String |  Custom 6 to be searched. |  |
| Custom7 a| String |  Custom 7 to be searched. |  |
| Custom8 a| String |  Custom 8 to be searched. |  |
| Custom9 a| String |  Custom 9 to be searched. |  |
| Custom10 a| String |  Custom 10 to be searched. |  |
| Custom11 a| String |  Custom 11 to be searched. |  |
| Custom12 a| String |  Custom 12 to be searched. |  |
| Custom13 a| String |  Custom 13 to be searched. |  |
| Custom14 a| String |  Custom 14 to be searched. |  |
| Custom15 a| String |  Custom 15 to be searched. |  |
| Custom16 a| String |  Custom 16 to be searched. |  |
| Custom17 a| String |  Custom 17 to be searched. |  |
| Custom18 a| String |  Custom 18 to be searched. |  |
| Custom19 a| String |  Custom 19 to be searched. |  |
| Custom20 a| String |  Custom 20 to be searched. |  |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Recall Request (Decommissioned)

`<sapconcur-connector:recall-request>`

NOTE: This operation uses the SAP Concur Travel Request v3.1 API, which SAP is decommissioning. Access to this API ends November 3, 2026. SAP recommends migrating to the Request v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Id a| String |  Request ID. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | String
|===

=== For Configurations

* config

== Submit Request (Decommissioned)

`<sapconcur-connector:submit-request>`

NOTE: This operation uses the SAP Concur Travel Request v3.1 API, which SAP is decommissioning. Access to this API ends November 3, 2026. SAP recommends migrating to the Request v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Id a| String | Request ID. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | String
|===

=== For Configurations

* config

== Update Attendee (Deprecated)

`<sapconcur-connector:update-attendee>`

NOTE: This operation uses the SAP Concur Attendees v3 API, which SAP deprecated on July 1, 2025. SAP recommends migrating to the Attendees v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Update Attendee Request Data a| Any |  |  `#[payload]` |
| User a| String | Login ID of the user who added the attendee to an expense. The user who is performing this API request must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Id a| String |  |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | String
|===

=== For Configurations

* config

== Update Attendee Type (Deprecated)

`<sapconcur-connector:update-attendee-type>`

NOTE: This operation uses the SAP Concur Attendee Types v3 API, which SAP deprecated on July 1, 2025. SAP recommends migrating to the Attendee Types v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Update Attendee Type Request Data a| Any |  |  `#[payload]` |
| Id a| String |  The ID of the attendee type. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | String
|===

=== For Configurations

* config

== Update Digital Tax Invoice

`<sapconcur-connector:update-digital-tax-invoice>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Update Digital Tax Invoice Request Data a| Any |  |  `#[payload]` |
| Id a| String |  The ID of the digital tax invoice to update. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | String
|===

=== For Configurations

* config

== Update Entry Attendee Association

`<sapconcur-connector:update-entry-attendee-association>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Update Entry Attendee Association Request Data a| Any |  |  `#[payload]` |
| User a| String | Login ID of the user who owns this entry-attendee association. The user must have the Web Services Admin role to use this parameter. |  |
| Id a| String |  The ID of the entry-attendee association to delete. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | String
|===

=== For Configurations

* config

== Update Expense Entry

`<sapconcur-connector:update-expense-entry>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Update Expense Entry Request Data a| Any |  |  `#[payload]` |
| User a| String | Login ID of the user who owns the entries. The user must have the Web Services Admin role to use this parameter. |  |
| Id a| String |  The ID of the expense entry to delete. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | String
|===

=== For Configurations

* config

== Update Expense Itemization

`<sapconcur-connector:update-expense-itemization>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Update Expense Itemization Request Data a| Any |  |  `#[payload]` |
| User a| String | Login ID of the user who owns the itemizations. The user must have the Web Services Admin role to use this parameter. |  |
| Id a| String |  The ID of the expense itemization to delete. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | String
|===

=== For Configurations

* config

== Update Invoices

`<sapconcur-connector:update-invoices>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Update Invoices Request Data a| Any |  |  `#[payload]` |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Update List Item (Deprecated)

`<sapconcur-connector:update-list-item>`

NOTE: This operation uses the SAP Concur List v3 / List Item v3 API, which SAP deprecated on April 16, 2021. SAP recommends migrating to the List v4 / List Item v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Update List Item Request Data a| Any |  |  `#[payload]` |
| Id a| String |  The unique identifier ofListitem to delete |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | String
|===

=== For Configurations

* config

== Update Payment Request

`<sapconcur-connector:update-payment-request>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Update Payment Request Request Data a| Any |  |  `#[payload]` |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Update Purchase Order

`<sapconcur-connector:update-purchase-order>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Update Purchase Order Request Data a| Any |  |  `#[payload]` |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Update Quick Expense (Decommissioned)

`<sapconcur-connector:update-quick-expense>`

NOTE: This operation uses the SAP Concur Quick Expense v3.0 API, which SAP has decommissioned. SAP recommends migrating to the Quick Expense v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Update Quick Expense Request Data a| Any |  |  `#[payload]` |
| User a| String | Login ID of the user. Optional. The user must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Id a| String |  The ID of the quick expense to be deleted. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | String
|===

=== For Configurations

* config

== Update Report

`<sapconcur-connector:update-report>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Update Report Request Data a| Any |  |  `#[payload]` |
| User a| String |  Optional.Login ID for the Report Owner. |  |
| Id a| String |  The unique identifier for the report. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | String
|===

=== For Configurations

* config

== Update Request (Decommissioned)

`<sapconcur-connector:update-request>`

NOTE: This operation uses the SAP Concur Travel Request v3.1 API, which SAP is decommissioning. Access to this API ends November 3, 2026. SAP recommends migrating to the Request v4 API, which this connector doesn't currently support.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Update Request Request Data a| Any |  |  `#[payload]` |
| User a| String | Login ID of the user. Optional. The user must have the Web Services Admin (Professional) or Can Administer (Standard) user role to use this parameter. |  |
| Do Submit a| Boolean |  Trigger a submit action upon a successfull save operation |  |
| Force Submit a| Boolean |  Force the submit operation even if non-blocking functional exceptions were to be raised on request creation or update operation. |  |
| Id a| String | Request ID. |  |x
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Update Vendors

`<sapconcur-connector:update-vendors>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Update Vendors Request Data a| Any |  |  `#[payload]` |
| Target Variable a| String |  Name of a variable that stores the operation's output. |  |
| Target Value a| String | Evaluate this expression against the operation's output and store the results in the target variable. |  `#[payload]` |
|===

=== Output

[cols="50a,50a"]
|===
|Type | Any
|===

=== For Configurations

* config

== Expiration Policy Type

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute. |  |
|===

== See Also

https://help.salesforce.com[Salesforce Help]
